opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/ppx_sexp_value"
bug-reports: "https://github.com/janestreet/ppx_sexp_value/issues"
dev-repo: "git+https://github.com/janestreet/ppx_sexp_value.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "ppx_core"
  "ppx_driver"
  "ppx_here"
  "ppx_metaquot"
  "ppx_sexp_conv"
  "jbuilder"                {build & >= "1.0+beta12"}
  "ocaml-migrate-parsetree" {>= "0.4"}
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
A ppx rewriter that simplifies building s-expressions from ocaml values

Part of the Jane Street's PPX rewriters collection.
"
